# Cache-Simulator

./: .gitignore  CMakeLists.txt
include/: BlockPolicy.h  Handler.h  Op.h  Reader.h  Utils.h  WritemissPolicy.h  Writer.h  defines.h
include/Mapping/: DirectMapping.h  FullConnectMapping.h  MappingPolicy.h  SetAssociativeMapping.h
include/Replacement/: BinaryReplace.h  LRUReplace.h  RandomReplace.h  ReplacementPolicy.h
src/: CacheSim.cpp  Handler.cpp  Utils.cpp
trace/: test.trace
